--- a/app/views/brokers/show.html.erb
+++ b/app/views/brokers/show.html.erb
@@ -8,7 +8,33 @@
    <div class="w-full xl:w-1/2 p-8 text-white text-3xl space-y-3">
     <p>Email: <%= @broker.email %></p>
     <p>Username: <%= @broker.username %></p>
-    <%= button_to "Back", admin_session_path,class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-red-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
+    <%= link_to "Back", 'javascript:history.go(-1);', class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-red-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
   </div>
 
+</div>
+
+<div class='text-white'>Hello, Portfolio here
+    <table class='text-white'>
+        <thead>
+            <tr>
+                <th>Symbol</th>
+                <th>Company</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <% @broker_stocks.each do |broker_stock| %>
+            <tr>
+                <td><%= broker_stock.stock_id %></td>
+                <td><%= broker_stock.companyname %></td>
+                <td><%= broker_stock.quantity %></td>
+                <td><%= broker_stock.price %></td>
+                <td><%= button_to 'Remove', broker_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
 </div>
