--- a/app/views/brokers/_index.html.erb
+++ b/app/views/brokers/_index.html.erb
@@ -143,6 +143,7 @@
             </div>
           </form>
           <div class="flex justify-center content-center justify-items-center ml-auto">
+            <span class="text-lg text-white font-bold pr-4 pt-1">Balance: $<%= current_user.balance %></span>
             <p class="text-lg text-white font-bold pr-4 pt-1"><%= current_user.username %></p>
             <a href class="flex flex-row items-center">
             <img src="https://pbs.twimg.com/profile_images/378800000298815220/b567757616f720812125bfbac395ff54_normal.png" alt class="h-10 w-10 bg-gray-200 border rounded-full"/> 
@@ -197,9 +198,8 @@
                                 <%= f.hidden_field :user_id, :value => current_user.id %>
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
-                                <%= f.hidden_field :quantity, :value => nil %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
@@ -238,10 +238,8 @@
                                 <%= f.hidden_field :user_id, :value => current_user.id %>
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
-                                <%= f.hidden_field :quantity, :value => nil %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                            <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
-                                <%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
@@ -281,9 +279,8 @@
                                 <%= f.hidden_field :user_id, :value => current_user.id %>
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
-                                <%= f.hidden_field :quantity, :value => nil %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
