--- a/app/views/brokers/edit.html.erb
+++ b/app/views/brokers/edit.html.erb
@@ -19,7 +19,11 @@
       <div class="mb-6 mt-6">
         <label for="description" class="mr-6 font-bold text-white"><%= f.label :username %></label>
         <%= f.text_field :username, class:"text-md appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" ,placeholder: "Username" %>
+      </div>
 
+      <div class="mb-6 mt-6">
+        <label for="description" class="mr-6 font-bold text-white"><%= f.label :balance %></label>
+        <%= f.text_field :balance, class:"text-md appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" ,placeholder: "Balance" %>
       </div>
 
       <div class="flex w-full mt-8">
