--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -72,6 +72,7 @@
             </div>
           </form>
           <div class="flex justify-center content-center justify-items-center ml-auto">
+            <span class="text-lg text-white font-bold pr-4 pt-1">Balance: $<%= current_user.balance %></span>
             <p class="text-lg text-white font-bold pr-4 pt-1"><%= current_user.username %></p>
             <a href class="flex flex-row items-center">
             <img src="https://pbs.twimg.com/profile_images/378800000298815220/b567757616f720812125bfbac395ff54_normal.png" alt class="h-10 w-10 bg-gray-200 border rounded-full"/> 
@@ -111,9 +112,8 @@
                                 <%= f.hidden_field :user_id, :value => current_user.id %>
                                 <%= f.hidden_field :stock_id, :value => broker_stock.stock_id %>
                                 <%= f.hidden_field :companyname, :value => broker_stock.companyname %>
-                                <%= f.hidden_field :quantity, :value => nil %>
                                 <%= f.hidden_field :price, :value => broker_stock.price %>
-                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>
