--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -1,10 +1,9 @@
 <div class="flex flex-row min-h-screen bg-gray-500 text-white">
     <aside class="sidebar w-64 md:shadow transform -translate-x-full md:translate-x-0 transition-transform duration-150 ease-in bg-gray-900">
       <div class="sidebar-header flex items-center justify-center py-4">
-        <div class="inline-flex">
-            <span class="leading-10 text-gray-100 text-4xl font-bold ml-1">stonks</span>
-        </div>
-      </div>
+            <%= image_tag("logo.svg", class:"w-8 h-8") %>
+            <h1 class="leading-10 text-gray-100 text-4xl font-bold ml-1 pb-2">stonks</h1>
+      </div> 
     <section class= "flex flex-col h-5/6">
       <div class="sidebar-content px-4 py-6">
         <ul class="flex flex-col w-full">
